--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -1,13 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Binx Crypto</title>
-    <!-- Required meta tags -->
+    <title>Binx Crypto - Trade your BTC with Best Rate</title>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <link rel="shortcut icon" href="{% static 'images/binx2_.png' %}" type="image/x-icon">
     <!-- Bootstrap CSS v5.2.1 -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -15,27 +13,36 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link rel="stylesheet" href="{% static 'css/preload.css' %}" type="text/css" />
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}" type="text/css" />
+    <link rel="shortcut icon" href="assets/images/favico3.png" type="image/x-icon">
   </head>
 
   <body>
+    <div class="active d-none" id="loader">
+      <div class="loader">
+        <div class="arc"></div>
+        <div class="arc"></div>
+        <div class="arc"></div>
+      </div>
+      <img class+"img-fluid" src="{% static 'images/binx2_.png' %}" alt="" srcset="{% static 'images/binx2_.png' %}" width="200px" draggable="false"/>
+    </div>
     <header>
+      {% include "components/navbar.html" %}
       <!-- place navbar here -->
     </header>
+
     <main>{% block content %}{% endblock %}</main>
+   
     <footer>
       <!-- place footer here -->
     </footer>
+  
     <!-- Bootstrap JavaScript Libraries -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
