--- a/backend/plugins/static/css/navbar.css
+++ b/backend/plugins/static/css/navbar.css
@@ -1,51 +1,83 @@
-nav{
+nav {
     display: flex;
     position: absolute;
     justify-content: space-between;
-    background: black;
-    color: #45c456 !important;
+    background:#501780;
+    color: #45c456 !important; 
     background-blend-mode: darken;
+    overflow: hidden;
 }
-.layer{
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-}
-.navbar-toggler{
+.navbar-toggler {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    border: none;
+    outline: none;
 }
-.navbar-toggler #bar:nth-child(1){
+.navbar-toggler-icon {
+    background-image: none !important;
+    background-color: #fff;
+    height: 3px;
+    width: 25px;
+    margin: 10px 0;
     position: relative;
-    border: 1px solid red;
+    transition: all 0.35s ease-out;
+    transform-origin: center;
 }
-.navbar-toggler #bar:nth-child(2){
+.navbar-toggler-icon::before {
+    display: block;
+    background-color: #45c456;
+    height: 3px;
+    content: "";
     position: relative;
-    border: 1px solid blue;
+    top: -7px;
+    transition: all 0.15s ease-out;
+    /*taken down to hide quicker*/
+    transform-origin: center;
 }
-.navbar-toggler #bar:nth-child(3){
+.navbar-toggler-icon::after {
+    display: block;
+    background-color: #45c456;
+    height: 3px;
+    content: "";
     position: relative;
-    border: 1px solid red;
+    top: 4px;
+    transition: all 0.35s ease-out;
+    transform-origin: center;
 }
-.custom-nav-btn{
+.navbar-dark .navbar-toggler-icon,
+.navbar-dark .navbar-toggler-icon::before,
+.navbar-dark .navbar-toggler-icon::after {
+    background-color: #45c456;
+}
+.navbar-toggler:not(.collapsed) .navbar-toggler-icon {
+    transform: rotate(45deg);
+}
+.navbar-toggler:not(.collapsed) .navbar-toggler-icon::before {
+    opacity: 0;
+}
+.navbar-toggler:not(.collapsed) .navbar-toggler-icon::after {
+    transform: rotate(-90deg) translateX(7px);
+}
+.custom-nav-btn {
     border: none;
     border-radius: 0%;
     margin-left: 5px;
     margin-right: 5px;
-    color:#45c456 !important;
+    color: #fff !important;
 }
-.custom-nav-btn:hover,
-.custom-nav-btn.active{
-    transform: scale(1.01);
-    outline: none;
-    border-bottom: 1px solid #45c456;
-    transition: all ease-in-out .1s;
-}
-.nav-link.custom-nav-btn{
-    font-size: 10px;
+.nav-link.custom-nav-btn {
+    font-size: 12px;
     display: block;
     position: relative;
     transition: all ease-in-out .5s;
+}
+.custom-nav-btn:hover, .custom-nav-btn.active{
+    transform: scale(1.01);
+    outline: none;
+    border-bottom: solid rgb(208, 139, 254);
+    border-radius: 20%;
+    border-bottom-width: 2px;
+    transition: all ease-in-out .1s;
 }
