--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/preload.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}" type="text/css" />
     <link rel="shortcut icon" href="assets/images/favico3.png" type="image/x-icon">
@@ -29,20 +30,25 @@
         <div class="arc"></div>
         <div class="arc"></div>
       </div>
-      <img class+"img-fluid" src="{% static 'images/binx2_.png' %}" alt="" srcset="{% static 'images/binx2_.png' %}" width="200px" draggable="false"/>
+      <img class="img-fluid" src="{% static 'images/binx2_.png' %}" alt="" srcset="{% static 'images/binx2_.png' %}" width="200px" draggable="false"/>
     </div>
-    <header>
+    <header class="container mx-auto py-4">
       {% include "components/navbar.html" %}
       <!-- place navbar here -->
     </header>
+    <img class="img-fluid d-none" src="{% static 'images/binx2_.png' %}" alt="Binx Crypto" srcset="{% static 'images/binx2_.png' %}" width="200px" draggable="false"/>
+    {% block bgVideo %}
+    <div class="video">
+        <video class="videoLayer" src="{% static 'video/_bg.mp4' %}" muted loop autoplay></video>
+    </div>
+    {% endblock %}
 
-    <main>{% block content %}{% endblock %}</main>
+    <main id="main">{% block content %}{% endblock %}</main>
    
-    <footer>
-      <!-- place footer here -->
-    </footer>
-  
+    <footer></footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    {% block extrascripts %}{% endblock %}
+    <script src="{% static 'js/wallet.js' %}"></script>
   </body>
 </html>
