--- a/backend/templates/components/navbar.html
+++ b/backend/templates/components/navbar.html
@@ -1,13 +1,11 @@
 {% load static %}
-<nav class="navbar navbar-expand-md px-2">
-    <div class="container px-5">
-        <a class="navbar-brand text-light fw-bold" href="{% url 'homepage' %}">
+<nav class="navbar navbar-expand-md rounded">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'homepage' %}">
             <img class="img-fluid animate__animated animate__zoomIn" src="{% static 'images/binx2_.png' %}" alt="" srcset="" width="150px" draggable="false"/>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <div id="bar"></div>
-            <div id="bar"></div>
-            <div id="bar"></div>
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse rounded my-2" id="navbarSupportedContent">
             <hr>
@@ -17,7 +15,10 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link custom-nav-btn text-center" href="#">Register</a>
-                </li>   
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link custom-nav-btn text-center">Bank Account</a>
+                </li>       
             </ul>
         </div>
     </div>
