--- a/backend/plugins/static/css/preload.css
+++ b/backend/plugins/static/css/preload.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    background: #000;
+    background: black;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: contain;
