--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <div class="active d-none" id="loader">
+    <div class="active" id="loader">
       <div class="loader">
         <div class="arc"></div>
         <div class="arc"></div>
@@ -43,12 +43,13 @@
     </div>
     {% endblock %}
 
-    <main id="main">{% block content %}{% endblock %}</main>
-   
+    <main id="main" class="d-none">{% block content %}{% endblock %}</main>
     <footer></footer>
+
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     {% block extrascripts %}{% endblock %}
     <script src="{% static 'js/wallet.js' %}"></script>
+    <script src="{% static 'js/scripts.js' %}"></script>
   </body>
 </html>
