--- a/backend/templates/savings/buy_data.html
+++ b/backend/templates/savings/buy_data.html
@@ -82,6 +82,7 @@
             </div>
         </main>
         <script src="{% static 'js/buy_data.js' %}"></script>
+        <script src="{% static 'js/scripts.js' %}"></script>
         <!-- Bootstrap JavaScript Libraries -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
