--- a/backend/templates/savings/buy_data.html
+++ b/backend/templates/savings/buy_data.html
@@ -12,6 +12,9 @@
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.3/css/bootstrap-select.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="{% static 'css/buy_data.css' %}" type="text/css"/>
+        <link rel="stylesheet" href="{% static 'css/styles.min.css' %}" type="text/css" />
+        <link rel="stylesheet" href="{% static 'css/preload.min.css' %}" type="text/css" />
+        <link rel="stylesheet" href="{% static 'css/navbar.min.css' %}" type="text/css" />
     </head>
     <body>
         <div class="active" id="loader">
