--- a/backend/templates/savings/buy_data.html
+++ b/backend/templates/savings/buy_data.html
@@ -56,7 +56,7 @@
                         <h1 class="payment-card__title">Buy Data</h1>
                     </div>
                     <div class="payment-card__body">
-                        <form id="payment-form" method="POST">
+                        <form id="payment-form" method="POST" class="container">
                             {% csrf_token %}
                             <div class="form-group my-2">
                                 <input type="number" inputmode="tel" class="form-control custom-input" id="recipient_no" name="recipient_no" placeholder="Phone Number">
