--- a/backend/templates/savings/buy_data.html
+++ b/backend/templates/savings/buy_data.html
@@ -28,7 +28,7 @@
         <header class="container mx-auto my-4">
             {% include "components/navbar.html" %}
         </header>
-        <main class="container">
+        <main class="container" id="main">
             <div class="app">  
                 <section>
                     <div class="square_box box_three"></div>
