--- a/backend/templates/savings/make_transfer.html
+++ b/backend/templates/savings/make_transfer.html
@@ -29,7 +29,7 @@
             {% include "components/navbar.html" %}
         </header>
 
-        <main class="container">
+        <main class="container" id="main">
             <div class="app">
                 <section>
                     <div class="square_box box_three"></div>
