--- a/backend/templates/savings/make_transfer.html
+++ b/backend/templates/savings/make_transfer.html
@@ -11,7 +11,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"/>
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.3/css/bootstrap-select.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="{% static 'css/transfer.min.css' %}" type="text/css" />
+        <link rel="stylesheet" href="{% static 'css/transfer.css' %}" type="text/css" />
         <link rel="stylesheet" href="{% static 'css/styles.min.css' %}" type="text/css" />
         <link rel="stylesheet" href="{% static 'css/preload.min.css' %}" type="text/css" />
         <link rel="stylesheet" href="{% static 'css/navbar.min.css' %}" type="text/css" />
@@ -34,6 +34,7 @@
                 <section>
                     <div class="square_box box_three"></div>
                     <div class="square_box box_four"></div>
+
                     <div class="container mt-5">
                       <div class="row">
                         <div class="col-sm-12 message_success-col">
@@ -42,6 +43,7 @@
                             <strong class="font__weight-semibold">Well done!</strong> <span id="message_success"></span>
                           </div>
                         </div>
+
                         <div class="col-sm-12 message_error-col">
                           <div class="alert fade alert-simple alert-danger alert-dismissible text-left font__family-montserrat font__size-16 font__weight-light brk-library-rendered rendered show" role="alert" data-brk-library="component__alert">
                             <i class="start-icon far fa-times-circle faa-pulse animated"></i>
@@ -56,25 +58,27 @@
                     <div class="payment-card__header">
                         <h1 class="payment-card__title">Transfer</h1>
                     </div>
-                    <div class="payment-card__body">
-                        <form id="payment-form" method="POST" class="container">
-                            {% csrf_token %}
-                            <select id="bank" class="form-select custom-select" mobile="true" data-live-search="true" data-width="fit">
-                                <option data-subtext="">Select Bank</option>
-                            </select>
-                            <div class="form-group my-2">
-                                <input type="number" inputmode="numeric" class="form-control custom-input" id="recipient" name="recipient" placeholder="Enter Account No" required>
-                            </div>
-                            <div class="form-group my-2">
-                                <input type="text" class="form-control custom-input border-0" id="recipient_name" name="recipient_name" placeholder="" readonly>
-                            </div>
-                            <button type="submit" class="active btn btn-success my-4" id="submit">Continue</button>
-                        </form>
+                    <div class="payment-card__body row">
+                        <div class="col-10 col-md-6 mx-auto">
+                            <form id="payment-form" method="POST">
+                                {% csrf_token %}
+                                <select id="bank" class="form-select custom-select" mobile="true" data-live-search="true" data-width="fit">
+                                    <option data-subtext="">Select Bank</option>
+                                </select>
+                                <div class="form-group my-2">
+                                    <input type="number" inputmode="numeric" class="form-control custom-input" id="recipient" name="recipient" placeholder="Enter Account No" required>
+                                </div>
+                                <div class="form-group my-2">
+                                    <input type="text" class="form-control custom-input border-0" id="recipient_name" name="recipient_name" placeholder="" readonly>
+                                </div>
+                                <button type="submit" class="active btn btn-success my-4" id="submit">Continue</button>
+                            </form>    
+                        </div>
                     </div>
                 </div>
             </div>
         </main>
-        <script src="{% static 'js/transfer.min.js' %}"></script>
+        <script src="{% static 'js/transfer.js' %}"></script>
         <script src="{% static 'js/scripts.js' %}"></script>
         <!-- Bootstrap JavaScript Libraries -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
