--- a/backend/templates/savings/make_transfer.html
+++ b/backend/templates/savings/make_transfer.html
@@ -81,6 +81,7 @@
         
         <script src="{% static 'js/transfer.js' %}"></script>
         <script src="{% static 'js/scripts.js' %}"></script>
+        <input id="token" value={{token}} hidden/>
         <!-- Bootstrap JavaScript Libraries -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
