--- a/backend/templates/savings/make_transfer.html
+++ b/backend/templates/savings/make_transfer.html
@@ -71,18 +71,52 @@
                                 <div class="form-group my-2">
                                     <input type="text" class="form-control custom-input border-0" id="recipient_name" name="recipient_name" placeholder="" readonly>
                                 </div>
-                                <button type="submit" class="active btn btn-success my-4" id="submit">Continue</button>
+
+                                <button type="submit"
+                                class="active btn btn-success my-4" id="submit">Continue</button>
                             </form>    
                         </div>
                     </div>
                 </div>
             </div>
+            <div id="transaction">                
+                <div class="modal fade" id="modalId" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-sm" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="modalTitleId">
+                                    Complete Transfer
+                                </h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="form-group">
+                                  <input type="number" maxlength="4" max name="pin" id="pin" class="form-control" placeholder="Transaction Pin" aria-describedby="helpId">
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Transfer</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Optional: Place to the bottom of scripts -->
+                <script>
+                    const myModal = new bootstrap.Modal(
+                        document.getElementById("modalId"),
+                        options,
+                    );
+                </script>
+                
+            </div>
         </main>
-        
         <script src="{% static 'js/transfer.js' %}"></script>
         <script src="{% static 'js/scripts.js' %}"></script>
         <input id="token" value={{token}} hidden/>
         <!-- Bootstrap JavaScript Libraries -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 </html>
