--- a/backend/templates/savings/make_transfer.html
+++ b/backend/templates/savings/make_transfer.html
@@ -69,11 +69,13 @@
                                     <input type="number" inputmode="numeric" class="form-control custom-input" id="recipient" name="recipient" placeholder="Enter Account No" required>
                                 </div>
                                 <div class="form-group my-2">
+                                    <input type="number" min="1000" inputmode="numeric" class="form-control custom-input" id="amount" name="amount" placeholder="Enter Amount" required>
+                                </div>
+                                <div class="form-group my-2">
                                     <input type="text" class="form-control custom-input border-0" id="recipient_name" name="recipient_name" placeholder="" readonly>
                                 </div>
-
-                                <button type="submit"
-                                class="active btn btn-success my-4" id="submit">Continue</button>
+                                <span id="transcx_id" hidden></span>
+                                <button type="submit" class="active btn btn-success my-4" id="submit">Continue</button>
                             </form>    
                         </div>
                     </div>
@@ -90,19 +92,22 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <div class="form-group">
-                                  <input type="number" maxlength="4" max name="pin" id="pin" class="form-control" placeholder="Transaction Pin" aria-describedby="helpId">
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Transfer</button>
+                                <form action="/complete_transfer/" method="post" id="completeTransfer">
+                                    <div class="form-group">
+                                        <input type="number" autofocus inputmode="numeric" oninput="if(value.length>4)value=value.slice(0,4)" name="pin" id="transactionPin" class="form-control" placeholder="Transaction Pin" aria-describedby="helpId">
+                                    </div>   
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                        <button type="submit" class="btn btn-primary">Transfer</button>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
                 </div>                
             </div>
         </main>
+
         <script src="{% static 'js/transfer.js' %}"></script>
         <script src="{% static 'js/scripts.js' %}"></script>
         <input id="token" value={{token}} hidden/>
