--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="{% static 'css/preload.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}" type="text/css" />
     <link rel="shortcut icon" href="assets/images/favico3.png" type="image/x-icon">
+    {% block extrastyles %}{% endblock %}
   </head>
 
   <body>
@@ -49,7 +50,7 @@
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     {% block extrascripts %}{% endblock %}
-    <script src="{% static 'js/wallet.js' %}"></script>
+    {% comment %} <script src="{% static 'js/wallet.js' %}"></script> {% endcomment %}
     <script src="{% static 'js/scripts.js' %}"></script>
   </body>
 </html>
